# basic-sub-auth

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt
src/subauth/: __init__.py  fastapi_utils.py  function_utils.py  sub_factory.py
src/subauth/data/: __init__.py  request.py  subscription.py
src/subauth/dataaccess/: __init__.py  cosmosdb.py
src/subauth/rules/: __init__.py  client_ip_check.py  cookie_check.py  date_check.py  header_check.py  host_check.py  method_check.py  path_check.py  query_check.py  rule.py  rule_factory.py
test/: client_ip_rule_test.py  host_rule_test.py  path_rule_test.py
